# AdsTycoon

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  run.sh
backend/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/agents/: __init__.py  campaign.py  consumer.py  insights.py  seeder.py
backend/routers/: auctions.py  campaigns.py  dashboard.py  export.py  simulations.py  stream.py
backend/services/: auction_engine.py  sheets_export.py
backend/tests/: conftest.py  test_auction_engine.py  test_auctions_router.py  test_campaign_tools.py  test_campaigns_router.py  test_composio_integration.py  test_consumer_tools.py  test_dashboard_router.py  test_health.py  test_insights_tools.py  test_models.py  test_schemas.py  test_seeder_prompt.py  test_seeder_tools.py  test_simulations_router.py
backend/tests/integration/: test_bedrock.py
backend/tools/: campaign_tools.py  consumer_tools.py  insights_tools.py  seeder_tools.py
consumer/: __init__.py  agent.py  prompts.py  schemas.py
consumer/tests/: test_integration.py  test_prompts.py  test_schemas.py  test_utils.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  utils.js
frontend/js/components/: agent-stream.js  campaign-detail.js  campaign-editor.js  dashboard.js  scenario-input.js
prompts/: persona_generation_prompt_template.md  synthetic_website_prompt.md
scripts/: connect_sheets.py
