[project]
name = "bid-exchange"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "strands-agents[bedrock]>=0.1.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "composio-core>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = ["integration: tests requiring external services (Bedrock, Composio)"]
addopts = "-m 'not integration'"
